2009-02-04  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added --bt-external-ip option. You can specify the external IP
	address to report to a BitTorrent tracker. Although this function
	is named 'external', it can accept any kind of IP addresses.
	* src/DefaultBtAnnounce.cc
	* src/OptionHandlerFactory.cc
	* src/option_processing.cc
	* src/prefs.cc
	* src/prefs.h
	* src/usage_text.h
	* test/DefaultBtAnnounceTest.cc

2009-02-03  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Extracted the algorithm to find the longest incremental sequence
	as max_sequence template.
	* src/LongestSequencePieceSelector.cc
	* src/a2algo.h
	* test/Makefile.am
	* test/a2algoTest.cc

2009-02-03  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Removed TEXT_HTTP_SERVER_LISTEN_PORT from translation texts.
	* src/usage_text.h

2009-02-02  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Updated doc for --uri-selector, --http-server-listen-port and
	--enable-http-server option. Documented --event-poll option.	
	* doc/aria2c.1.txt
	
2009-02-02  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Updated doc for --enable-http-server.
	* src/usage_text.h

2009-02-02  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Documented --http-server-listen-port and --enable-http-server in
	man page.
	* doc/aria2c.1.txt

2009-02-01  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Updated Spanish, Indonesian, Russian, Ukrainian and Italian
	translations. Thanks to all translators.
	* po/es.po
	* po/id.po
	* po/it.po
	* po/ru.po
	* po/uk.po
	
2009-02-01  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Bump up version number to 1.2.0
	* configure.ac
	
2009-02-01  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	BtContext::getAnnounceTiers() now returns const reference.
	* src/BtContext.h
	* src/DefaultBtContext.cc
	* src/DefaultBtContext.h
	* test/MockBtContext.h
